--- a/layers/pois.yaml
+++ b/layers/pois.yaml
@@ -1,5 +1,350 @@
-import:
-    - ../components/textures.yaml
+styles:
+    icons:
+        base: points
+        texture: pois
+
+textures:
+    pois:
+        url: ../images/poi_icons_18@2x.png
+        filtering: mipmap
+        sprites:
+            # define sprites: [x origin, y origin, width, height]
+            airport: [0, 76, 36, 36]
+            aerodrome: [0, 76, 36, 36]
+            airport-xl: [908, 0, 72, 72]
+            aquarium: [928, 236, 36, 36]
+            art-gallery: [840, 236, 36, 36]
+            art_gallery: [840, 236, 36, 36]
+            art: [840, 236, 36, 36]
+            athletics-sports: [398, 236, 36, 36]
+            pitch: [398, 236, 36, 36]
+            athletic_sports: [398, 236, 36, 36]
+            recreation_ground: [398, 236, 36, 36]
+            atm: [136, 236, 36, 36]
+            automotive-shop: [222, 236, 36, 36]
+            car_repair: [222, 236, 36, 36]
+            automotive: [222, 236, 36, 36]
+            tyres: [222, 236, 36, 36]
+            bakery: [752, 236, 36, 36]
+            pastry: [752, 236, 36, 36]
+            chocolate: [752, 236, 36, 36]
+            bank: [178, 236, 36, 36]
+            bar: [444, 236, 36, 36]
+            pub: [444, 236, 36, 36]
+            baseball-field: [625, 118, 36, 36]
+            basketball-court: [580, 118, 36, 36]
+            beach: [758, 118, 36, 36]
+            beer-garden: [442, 278, 36, 36]
+            biergarten: [442, 278, 36, 36]
+            brewery: [442, 278, 36, 36]
+            bench: [602, 0, 36, 36]
+            bicycle-parking: [844, 160, 36, 36]
+            bike-shop: [90, 236, 36, 36]
+            bicycle: [90, 236, 36, 36]
+            bicycle_rental: [90, 236, 36, 36]
+            bike: [90, 236, 36, 36]
+            bike_shop: [90, 236, 36, 36]
+            boat-ferry: [864, 0, 36, 36]
+            ferry_terminal: [864, 0, 36, 36]
+            ferry-boat: [864, 0, 36, 36]
+            ferry: [864, 0, 36, 36]
+            boat-ramp: [270, 118, 36, 36]
+            slipway: [270, 118, 36, 36]
+            boat_ramp: [270, 118, 36, 36]
+            bookstore: [44, 236, 36, 36]
+            books: [44, 236, 36, 36]
+            bridge: [0, 160, 36, 36]
+            buddhism: [890, 118, 36, 36]
+            building: [620, 236, 36, 36]
+            auditorium: [620, 236, 36, 36]
+            terminal: [620, 236, 36, 36]
+            hangar: [620, 236, 36, 36]
+            retirement_home: [620, 236, 36, 36]
+            manor: [620, 236, 36, 36]
+            recreation_center: [620, 236, 36, 36]
+            apartments: [620, 236, 36, 36]
+            burger: [310, 278, 36, 36]
+            fast_food: [310, 278, 36, 36]
+            bus-station: [820, 0, 36, 36]
+            bus_stop: [820, 0, 36, 36]
+            bus_station: [820, 0, 36, 36]
+            butcher: [46, 118, 36, 36]
+            campground: [934, 118, 36, 36]
+            camp_site: [934, 118, 36, 36]
+            caravan_site: [934, 118, 36, 36]
+            candy-store: [178, 278, 36, 36]
+            candy: [178, 278, 36, 36]
+            confectionery: [178, 278, 36, 36]
+            capital-l: [676, 278, 18, 18]
+            capital-m: [654, 278, 14, 14]
+            capital-s: [634, 280, 10, 10]
+            capital-xl: [730, 278, 22, 22]
+            capital-xs: [620, 280, 8, 8]
+            car-dealership: [0, 236, 36, 36]
+            car: [0, 236, 36, 36]
+            castle: [536, 76, 36, 36]
+            fort: [536, 76, 36, 36]
+            cemetery: [846, 118, 36, 36]
+            grave_yard: [846, 118, 36, 36]
+            church: [310, 160, 36, 36]
+            clothing-store: [0, 278, 36, 36]
+            clothes: [0, 278, 36, 36]
+            chothing-store: [0, 278, 36, 36]
+            fashion: [0, 278, 36, 36]
+            coffee-shop: [708, 236, 36, 36]
+            cafe: [708, 236, 36, 36]
+            college-university: [46, 278, 36, 36]
+            university: [46, 278, 36, 36]
+            college: [46, 278, 36, 36]
+            convenience-store: [180, 118, 36, 36]
+            convenience: [180, 118, 36, 36]
+            convenience_store: [180, 118, 36, 36]
+            beverages: [180, 118, 36, 36]
+            courthouse: [348, 0, 36, 36]
+            department-store: [936, 160, 36, 36]
+            department_store: [936, 160, 36, 36]
+            drinking-water: [398, 278, 36, 36]
+            dry-cleaning: [136, 118, 36, 36]
+            dry_cleaning: [136, 118, 36, 36]
+            electronics-store: [798, 160, 36, 36]
+            electronics: [798, 160, 36, 36]
+            computer: [798, 160, 36, 36]
+            factory: [576, 236, 36, 36]
+            industrial: [576, 236, 36, 36]
+            chimney: [576, 236, 36, 36]
+            sub_station: [576, 236, 36, 36]
+            substation: [576, 236, 36, 36]
+            wastewater_plant: [576, 236, 36, 36]
+            works: [576, 236, 36, 36]
+            water_works: [576, 236, 36, 36]
+            plant: [576, 236, 36, 36]
+            generator: [576, 236, 36, 36]
+            fire-station: [304, 0, 36, 36]
+            fire_station: [304, 0, 36, 36]
+            fitness: [0, 118, 36, 36]
+            gym: [0, 118, 36, 36]
+            fitness_center: [0, 118, 36, 36]
+            flower-shop: [264, 160, 36, 36]
+            florist: [264, 160, 36, 36]
+            forest: [224, 278, 36, 36]
+            conservation: [224, 278, 36, 36]
+            nature_reserve: [224, 278, 36, 36]
+            fountain: [478, 160, 36, 36]
+            garden: [802, 118, 36, 36]
+            gas-station: [134, 278, 36, 36]
+            fuel: [134, 278, 36, 36]
+            generic: [574, 278, 36, 36]
+            subway_entrance: [574, 278, 36, 36]
+            generic-sport: [522, 160, 36, 36]
+            gift-shop: [218, 160, 36, 36]
+            gift: [218, 160, 36, 36]
+            golf-course: [534, 118, 36, 36]
+            golf_course: [534, 118, 36, 36]
+            government-building: [354, 236, 36, 36]
+            townhall: [354, 236, 36, 36]
+            public_building: [354, 236, 36, 36]
+            embassy: [354, 236, 36, 36]
+            grocery-store: [752, 160, 36, 36]
+            supermarket: [752, 160, 36, 36]
+            health_food: [752, 160, 36, 36]
+            greengrocer: [752, 160, 36, 36]
+            harbor-marina: [310, 236, 36, 36]
+            marina: [310, 236, 36, 36]
+            harbor: [310, 236, 36, 36]
+            harbor_marina: [310, 236, 36, 36]
+            dock: [310, 236, 36, 36]
+            mooring: [310, 236, 36, 36]
+            hardware-store: [940, 76, 36, 36]
+            hardware: [940, 76, 36, 36]
+            doityourself: [940, 76, 36, 36]
+            paint: [940, 76, 36, 36]
+            historic-site: [174, 160, 36, 36]
+            hospital: [174, 0, 36, 36]
+            hotel: [776, 0, 36, 36]
+            motel: [776, 0, 36, 36]
+            hostel: [776, 0, 36, 36]
+            ice-cream-shop: [484, 278, 36, 36]
+            ice_cream: [484, 278, 36, 36]
+            information: [528, 278, 36, 36]
+            info: [528, 278, 36, 36]
+            jewelry-store: [852, 76, 36, 36]
+            jewelry: [852, 76, 36, 36]
+            jewelry_store: [852, 76, 36, 36]
+            landmark: [262, 0, 36, 36]
+            memorial: [262, 0, 36, 36]
+            monument: [262, 0, 36, 36]
+            wayside_shrine: [262, 0, 36, 36]
+            tower: [262, 0, 36, 36]
+            beacon: [262, 0, 36, 36]
+            laundry: [808, 76, 36, 36]
+            dry_cleaning: [808, 76, 36, 36]
+            library: [0, 0, 36, 36]
+            light-rail: [732, 0, 36, 36]
+            light_rail: [732, 0, 36, 36]
+            tram_stop: [732, 0, 36, 36]
+            lighthouse: [400, 118, 36, 36]
+            liquor-store: [706, 160, 36, 36]
+            alcohol: [706, 160, 36, 36]
+            liquor: [706, 160, 36, 36]
+            mall: [762, 76, 36, 36]
+            market: [716, 76, 36, 36]
+            variety_store: [716, 76, 36, 36]
+            boutique: [716, 76, 36, 36]
+            dairy: [716, 76, 36, 36]
+            retail: [716, 76, 36, 36]
+            mine: [898, 76, 36, 36]
+            quarry: [898, 76, 36, 36]
+            mineshaft: [898, 76, 36, 36]
+            adit: [898, 76, 36, 36]
+            mobile-phone-shop: [624, 76, 36, 36]
+            mobile_phone: [624, 76, 36, 36]
+            mosque: [88, 0, 36, 36]
+            mountain: [356, 118, 36, 36]
+            peak: [356, 118, 36, 36]
+            movie-theatre: [972, 236, 36, 36]
+            cinema: [972, 236, 36, 36]
+            movie-theater: [972, 236, 36, 36]
+            museum: [130, 160, 36, 36]
+            observatory: [130, 160, 36, 36]
+            music-store: [490, 76, 36, 36]
+            music: [490, 76, 36, 36]
+            musical_instrument: [490, 76, 36, 36]
+            newsstand: [444, 76, 36, 36]
+            kiosk: [444, 76, 36, 36]
+            newsagent: [444, 76, 36, 36]
+            office: [714, 118, 36, 36]
+            insurance: [714, 118, 36, 36]
+            company: [714, 118, 36, 36]
+            optical-shop: [402, 76, 36, 36]
+            optician: [402, 76, 36, 36]
+            optical_shop: [402, 76, 36, 36]
+            park: [434, 160, 36, 36]
+            park-xl: [354, 160, 72, 72]
+            parking: [890, 160, 36, 36]
+            performing-arts: [796, 236, 36, 36]
+            theater: [796, 236, 36, 36]
+            theatre: [796, 236, 36, 36]
+            pet-store: [358, 76, 36, 36]
+            pet: [358, 76, 36, 36]
+            pet-service: [358, 76, 36, 36]
+            pet_store: [358, 76, 36, 36]
+            pharmacy: [92, 118, 36, 36]
+            chemist: [92, 118, 36, 36]
+            photography-lab: [314, 76, 36, 36]
+            photo_studio: [314, 76, 36, 36]
+            photography_lab: [314, 76, 36, 36]
+            photographer: [314, 76, 36, 36]
+            pier: [688, 0, 36, 36]
+            playground: [580, 76, 36, 36]
+            police: [218, 0, 36, 36]
+            pool: [314, 118, 36, 36]
+            swimming_pool: [314, 118, 36, 36]
+            water_park: [314, 118, 36, 36]
+            post-office: [532, 236, 36, 36]
+            post_office: [532, 236, 36, 36]
+            real-estate: [270, 76, 36, 36]
+            estate_agent: [270, 76, 36, 36]
+            real_estate: [270, 76, 36, 36]
+            recycling-facility: [226, 76, 36, 36]
+            recycling: [226, 76, 36, 36]
+            rental-car: [644, 0, 36, 36]
+            car_rental: [644, 0, 36, 36]
+            car_sharing: [644, 0, 36, 36]
+            restaurant: [268, 278, 36, 36]
+            deli: [268, 278, 36, 36]
+            ruin: [558, 0, 36, 36]
+            ruins: [558, 0, 36, 36]
+            archaeological_site: [558, 0, 36, 36]
+            salon-barber: [182, 76, 36, 36]
+            hairdresser: [182, 76, 36, 36]
+            salon: [182, 76, 36, 36]
+            beauty_salon: [182, 76, 36, 36]
+            school: [670, 118, 36, 36]
+            kindergarten: [670, 118, 36, 36]
+            shoe-store: [670, 76, 36, 36]
+            shoes: [670, 76, 36, 36]
+            shoe_store: [670, 76, 36, 36]
+            ski-area: [568, 160, 36, 36]
+            soccer-field: [488, 118, 36, 36]
+            spiritual-center: [488, 236, 36, 36]
+            spiritual_center: [488, 236, 36, 36]
+            place_of_worship: [488, 236, 36, 36]
+            wayside_chapel: [488, 236, 36, 36]
+            sporting-goods-shop: [136, 76, 36, 36]
+            sporting_goods: [136, 76, 36, 36]
+            sports: [136, 76, 36, 36]
+            outdoor: [136, 76, 36, 36]
+            spring: [444, 118, 36, 36]
+            stadium: [661, 160, 36, 36]
+            subway-entrance: [516, 0, 36, 36]
+            synagogue: [44, 0, 36, 36]
+            tailor-shop: [90, 76, 36, 36]
+            tailor: [90, 76, 36, 36]
+            tennis: [614, 160, 36, 36]
+            theme-park: [88, 160, 36, 36]
+            theme_park: [88, 160, 36, 36]
+            miniature_golf: [88, 160, 36, 36]
+            toilets: [978, 118, 36, 36]
+            townspot-l: [934, 278, 18, 18]
+            townspot-l-rev: [816, 278, 24, 24]
+            townspot-m: [912, 278, 14, 14]
+            townspot-m-rev: [790, 278, 20, 20]
+            townspot-s: [892, 278, 12, 12]
+            townspot-s-rev: [772, 278, 12, 12]
+            townspot-xl: [960, 278, 22, 22]
+            townspot-xl-rev: [846, 280, 20, 20]
+            townspot-xs: [874, 278, 10, 10]
+            townspot-xs-rev: [758, 280, 6, 6]
+            toy-game-store: [44, 76, 36, 36]
+            toys: [44, 76, 36, 36]
+            baby_goods: [44, 76, 36, 36]
+            traffic-signal: [90, 278, 36, 36]
+            traffic_signals: [90, 278, 36, 36]
+            train-station: [472, 0, 36, 36]
+            station: [472, 0, 36, 36]
+            train-staion: [472, 0, 36, 36]
+            train-station-xl: [392, 0, 72, 72]
+            ux-current-location: [294, 320, 88, 88]
+            current-location: [294, 320, 88, 88]
+            ux-locate-off: [628, 320, 72, 72]
+            locate-off: [628, 320, 72, 72]
+            ux-locate-on: [548, 320, 72, 72]
+            locate-on: [548, 320, 72, 72]
+            ux-route-arrow: [0, 320, 128, 128]
+            route-arrow: [0, 320, 128, 128]
+            ux-route-start: [214, 320, 72, 92]
+            route-start: [214, 320, 72, 92]
+            ux-route-stop: [136, 320, 72, 92]
+            route-stop: [136, 320, 72, 92]
+            ux-search-active: [388, 320, 72, 108]
+            search-active: [388, 320, 72, 108]
+            ux-search-inactive: [468, 320, 72, 108]
+            search-inactive: [468, 320, 72, 108]
+            ux-transit-stop: [702, 278, 20, 20]
+            veterinarian: [132, 0, 36, 36]
+            pet_care: [132, 0, 36, 36]
+            veterinary: [132, 0, 36, 36]
+            view-point: [884, 236, 36, 36]
+            viewpoint: [884, 236, 36, 36]
+            view_point: [884, 236, 36, 36]
+            vista: [884, 236, 36, 36]
+            vineyard: [266, 236, 36, 36]
+            volcano: [226, 118, 36, 36]
+            wine-bar: [354, 278, 36, 36]
+            winery: [664, 236, 36, 36]
+            wine: [664, 236, 36, 36]
+            zoo: [44, 160, 36, 36]
+
+            # # UX/UI icons for map interactivity & app chrome
+            # #
+            # ux-current-location: [158, 342, 88, 88]
+            # ux-route-arrow: [822, 210, 128, 128]
+            # ux-route-start: [78, 342, 72, 92]
+            # ux-route-stop: [0, 342, 72, 92]
+            # ux-search-active: [252, 342, 72, 108]
+            # ux-search-inactive: [332, 342, 72, 108]
+            # # ux-transit-stop is currently reusing capital-xl artwork, please customize
+            # ux-transit-stop: [584, 210, 20, 20]
 
 layers:
     pois_and_landuse_labels:
@@ -1225,7 +1570,3 @@ layers:
                 #                 text:
                 #                     visible: false
 
-styles:
-    icons:
-        base: points
-        texture: pois
