--- a/layers/buildings.yaml
+++ b/layers/buildings.yaml
@@ -23,19 +23,23 @@ layers:
                 width: 1px
         footprints:
             filter:
-                $zoom: { min: 14, max: 16 }
+                all:
+                    - $zoom: [14, 15]
                 any:
                     # show footprints for buildings at least one zoom level before they will be extruded
-                    - { $zoom: [14], area: { min: 5000 } }
-                    - { $zoom: [14], height: { min: 190 } }
-                    - { $zoom: [14], volume: { min: 150000 } }
+                    - { $zoom: [14], scale_rank: [0,1,2,3] }
+#                    - { $zoom: [14], area: { min: 5000 } }
+#                    - { $zoom: [14], height: { min: 190 } }
+#                    - { $zoom: [14], volume: { min: 150000 } }
                     - { $zoom: [15], height: { min: 100 } }
                     - { $zoom: [15], area: { min: 2500 } }
                     - { $zoom: [15], volume: { min: 100000 } }
+                    - { $zoom: [15], scale_rank: [0,1,2,3] }
             draw:
                 polygons:
                     color: [0.212,0.302,0.431]
                     visible: true
+                    interactive: true
                 lines:
                     color: [0.392,0.627,0.651]
                     width: [[14,0.55px],[16,0.5px]]
@@ -53,7 +57,8 @@ layers:
 
         extrude:
             filter:
-                $zoom: { min: 16 }
+                all:
+                    - $zoom: { min: 16 }
                 any:
                     - { $zoom: [16], height: { min: 60 } }
                     - { $zoom: [16], area: { min: 1200 } }
