--- a/styles/lines.yaml
+++ b/styles/lines.yaml
@@ -1,8 +1,8 @@
 import:
     # Blocks
-    - https://tangrams.github.io/blocks/lines/glow.yaml
-    - https://tangrams.github.io/blocks/lines/dots.yaml
-    - https://tangrams.github.io/blocks/lines/dots-glow.yaml
+    - ../blocks/lines/glow.yaml
+    - ../blocks/lines/dots.yaml
+    - ../blocks/lines/dots-glow.yaml
 
 styles:
     lines-coast:
