--- a/styles/points.yaml
+++ b/styles/points.yaml
@@ -5,7 +5,7 @@ styles:
 
 textures:
     pois:
-        url: ../images/poi_icons_18@2x.png
+        url: ../components/images/poi_icons_18@2x.png
         filtering: mipmap
         sprites:
             # define sprites: [x origin, y origin, width, height]
