--- a/styles/polygons.yaml
+++ b/styles/polygons.yaml
@@ -1,16 +1,15 @@
 import:
     # Blocks
-    - https://tangrams.github.io/blocks/elevation/stripes.yaml
-    - https://tangrams.github.io/blocks/elevation/dash.yaml
-    - https://tangrams.github.io/blocks/polygons/dots.yaml
-    # - https://tangrams.github.io/blocks/polygons/shimmering.yaml
-    - https://tangrams.github.io/blocks/tiling/simplex.yaml
-    - https://tangrams.github.io/blocks/generative/noise.yaml
-    - https://tangrams.github.io/blocks/polygons/stripes.yaml
-    - https://tangrams.github.io/blocks/polygons/diagonal-stripes.yaml
-    - https://tangrams.github.io/blocks/polygons/diagonal-grid.yaml
+    - ../blocks/elevation/stripes.yaml
+    - ../blocks/elevation/dash.yaml
+    - ../blocks/polygons/dots.yaml
+    - ../blocks/tiling/simplex.yaml
+    - ../blocks/generative/noise.yaml
+    - ../blocks/polygons/stripes.yaml
+    - ../blocks/polygons/diagonal-stripes.yaml
+    - ../blocks/polygons/diagonal-grid.yaml
     # Utils
-    - https://tangrams.github.io/blocks/geometry/normal.yaml
+    - ../blocks/geometry/normal.yaml
 
 styles:
     polygons-diagonal-opaque-stripes:
