--- a/layers/ux-sdk-overlay.yaml
+++ b/layers/ux-sdk-overlay.yaml
@@ -1,5 +1,5 @@
 layers:
-	# Map overlays for styling the server response (using special source layer names) for route line, current location, and search result pins
+    # Map overlays for styling the server response (using special source layer names) for route line, current location, and search result pins
     mz_route_line:
         data: { source: mz_route_line }
         draw:
@@ -32,9 +32,9 @@ layers:
                 sprite: ux-current-location
                 size: 36px
                 collide: false
-                transition:
-                    [show, hide]:
-                        time: 0s
+                # transition:
+                #     [show, hide]:
+                #         time: 0s
     mz_route_location:
         data: { source: mz_route_location }
         draw:
@@ -43,9 +43,9 @@ layers:
                 sprite: ux-route-arrow
                 size: [60px,60px]
                 collide: false
-                transition:
-                    [show, hide]:
-                        time: 0s
+                # transition:
+                #     [show, hide]:
+                #         time: 0s
     mz_route_start:
         data: { source: mz_route_start }
         draw:
@@ -56,9 +56,9 @@ layers:
                 size: [36px,46px]
                 collide: false
                 anchor: top
-                transition:
-                    [show, hide]:
-                        time: 0s
+                # transition:
+                #     [show, hide]:
+                #         time: 0s
     mz_route_destination:
         data: { source: mz_route_destination }
         draw:
@@ -69,9 +69,9 @@ layers:
                 size: [36px,46px]
                 collide: false
                 anchor: top
-                transition:
-                    [show, hide]:
-                        time: 0s
+                # transition:
+                #     [show, hide]:
+                #         time: 0s
     mz_route_transit_stop:
         data: { source: mz_route_transit_stop }
         draw:
@@ -80,9 +80,9 @@ layers:
                 sprite: ux-transit-stop
                 size: [15px,15px]
                 collide: false
-                transition:
-                     [show, hide]:
-                         time: 0s
+                # transition:
+                #      [show, hide]:
+                #          time: 0s
     mz_search_result:
         data: { source: mz_search_result }
         draw:
@@ -92,9 +92,9 @@ layers:
                 size: [36px,54px]
                 collide: false
                 anchor: top
-                transition:
-                    [show, hide]:
-                        time: 0s
+                # transition:
+                #     [show, hide]:
+                #         time: 0s
         inactive:
             filter: { state: inactive }
             draw:
@@ -109,9 +109,9 @@ layers:
                 size: [36px,54px]
                 collide: false
                 anchor: top
-                transition:
-                    [show, hide]:
-                        time: 0s
+                # transition:
+                #     [show, hide]:
+                #         time: 0s
 
     # Used by the SDK to place point, line, and polygon overlays on the map
     mz_default_point:
@@ -123,9 +123,9 @@ layers:
                 size: [36px,54px]
                 collide: false
                 anchor: top
-                transition:
-                    [show, hide]:
-                        time: 0s
+                # transition:
+                #     [show, hide]:
+                #         time: 0s
     mz_default_line:
         data: { source: mz_default_line }
         draw:
