making ux-sdk-overlay.yaml more friendly for JS and pythons parsers

--- a/layers/ux-sdk-overlay.yaml
+++ b/layers/ux-sdk-overlay.yaml
@@ -32,9 +32,7 @@ layers:
                 sprite: ux-current-location
                 size: 36px
                 collide: false
-                # transition:
-                #     [show, hide]:
-                #         time: 0s
+                transition: { show: { time: 0s }, hide: { time: 0s } }
     mz_route_location:
         data: { source: mz_route_location }
         draw:
@@ -43,9 +41,7 @@ layers:
                 sprite: ux-route-arrow
                 size: [60px,60px]
                 collide: false
-                # transition:
-                #     [show, hide]:
-                #         time: 0s
+                transition: { show: { time: 0s }, hide: { time: 0s } }
     mz_route_start:
         data: { source: mz_route_start }
         draw:
@@ -56,9 +52,7 @@ layers:
                 size: [36px,46px]
                 collide: false
                 anchor: top
-                # transition:
-                #     [show, hide]:
-                #         time: 0s
+                transition: { show: { time: 0s }, hide: { time: 0s } }
     mz_route_destination:
         data: { source: mz_route_destination }
         draw:
@@ -69,9 +63,7 @@ layers:
                 size: [36px,46px]
                 collide: false
                 anchor: top
-                # transition:
-                #     [show, hide]:
-                #         time: 0s
+                transition: { show: { time: 0s }, hide: { time: 0s } }
     mz_route_transit_stop:
         data: { source: mz_route_transit_stop }
         draw:
@@ -80,9 +72,7 @@ layers:
                 sprite: ux-transit-stop
                 size: [15px,15px]
                 collide: false
-                # transition:
-                #      [show, hide]:
-                #          time: 0s
+                transition: { show: { time: 0s }, hide: { time: 0s } }
     mz_search_result:
         data: { source: mz_search_result }
         draw:
@@ -92,9 +82,7 @@ layers:
                 size: [36px,54px]
                 collide: false
                 anchor: top
-                # transition:
-                #     [show, hide]:
-                #         time: 0s
+                transition: { show: { time: 0s }, hide: { time: 0s } }
         inactive:
             filter: { state: inactive }
             draw:
@@ -109,9 +97,7 @@ layers:
                 size: [36px,54px]
                 collide: false
                 anchor: top
-                # transition:
-                #     [show, hide]:
-                #         time: 0s
+                transition: { show: { time: 0s }, hide: { time: 0s } }
 
     # Used by the SDK to place point, line, and polygon overlays on the map
     mz_default_point:
@@ -123,9 +109,7 @@ layers:
                 size: [36px,54px]
                 collide: false
                 anchor: top
-                # transition:
-                #     [show, hide]:
-                #         time: 0s
+                transition: { show: { time: 0s }, hide: { time: 0s } }
     mz_default_line:
         data: { source: mz_default_line }
         draw:
